chat: fix 'no stickers' alert in stickers menu
Closes #129.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1911,6 +1911,8 @@
                 }
                 /// Stickers -> Retry button.
                 [data-id = 'retry'] { c: ac }
+                /// Stickers -> 'No stickers' alert. #128
+                /._2Hze1 { c: cm }
             }
             /// Remove wrapper background.
             /._3LFRS { c: 0 0 t }
