global: fix the size of default-user icons

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -545,11 +545,12 @@
         c: 0 0 bg;
         > img { rad: var(--avatar-r) i }
         /// Tweak default-user icons.
-        if ( avatar_r != '50%' ) {
+        if ( radius-a != '50%' ) {
             /[style *= 'height: 26px'],
             /[style *= 'height: 40px'],
             /[style *= 'height: 49px'],
             /[style *= 'height: 55px'],
+            /[style *= 'height: 82px'],
             /[style *= 'height: 200px'] {
                 [data-icon = 'default-user'] svg {
                     margin-top: -4px;
