left: fix text color for the version info

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1241,7 +1241,7 @@
             ._27YTC, /._3dwyT { c: cm }
             ._1i7uJ { c: 0 0 bd }
             /// Version info.
-            ._2MoEz { c: fg }
+            .ZIgPi { c: fg }
         }
     }
 
