chat: updated deleted message class

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1484,7 +1484,7 @@
                 div > div:nth-child(3) span { c: fg }
             }
             /// Deleted message.
-            ._1upWv {
+            ._18dOq {
                 c: cm;
                 [data-icon] path { fill: cm }
             }
