chat: fix attach dropdown menu

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -425,9 +425,9 @@
         ._15wNI { c: 0 ac ac }
 
         /// Global -> Active buttons.
-        ._3j8Pd {
+        .rAUz7 {
             path:not([fill = '#009588']) { fill-opacity: 0.55 }
-            &.GPmgF, &.GPmgf {
+            &._3TbsN {
                 c: 0 0 bd;
                 /// Chat -> Reset opacity for attach menu items.
                 &:not(#z):not(#y) [data-icon] path { fill-opacity: 1 i }
@@ -992,15 +992,15 @@
                 &:not(:hover) [data-icon] path { fill-opacity: 0.55 i }
             }
             /// Chat -> Attach dropdown.
-            &._1fRWV {
+            &.XhRTI {
                 c: 0 0 t;
                 border: none i;
                 box-shadow: none i;
                 li { c: 0 0 t }
                 /// Button shadow.
-                .Ijb1Q::after { box-shadow: bsh i }
+                ._1azEi::after { box-shadow: bsh i }
                 /// Tooltip colors.
-                ._3Fjw5 {
+                ._2Par4 {
                     c: fg 0 bd;
                     box-shadow: bsh;
                 }
