fix: remove accent color from unread messages fixing vednoc#131

--- a/wa.user.css
+++ b/wa.user.css
@@ -824,7 +824,7 @@
     fill: var(--accent) !important;
   }
   ._2lSfP[data-icon *= "-dblcheck"]:not(#z) path,
-  ._209Po[data-icon *= "-dblcheck"]:not(#z) path {
+  ._1xtH9[data-icon *= "-dblcheck"]:not(#z) path {
     fill: var(--accent) !important;
   }
   span[class][data-icon *= "check"] path {
