--- a/wa.user.styl
+++ b/wa.user.styl
@@ -925,7 +925,7 @@
         /.a5DO0, /._2lSfP {
             span[data-icon *= '-dblcheck'] path { v: ac }
         }
-        /._2lSfP, /._209Po {
+        /._2lSfP, /._1xtH9 {
             &[data-icon *= '-dblcheck']:not(#z) path { v: ac }
         }
         &[data-icon *= 'check'] path { fill-opacity: 1 i }
