global: fix styles for checkboxes and buttons

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -421,8 +421,8 @@
         }
 
         /// Global -> Checkboxes.
-        ._1Zo-R { c: 0 cm hl }
-        ._15wNI { c: 0 ac ac }
+        /.me9CP { c: 0 cm hl }
+        /._1VD7W { c: 0 ac ac }
 
         /// Global -> Active buttons.
         .rAUz7 {
@@ -676,7 +676,7 @@
         ._2yVvV { c: fg }
         /// Buttons.
         [role = 'button'] {
-            &._23_1v {
+            &._1WZqU {
                 c: cm;
                 &:hover {
                     c: fg 0 hl;
@@ -684,7 +684,7 @@
                 }
             }
             /// Primary.
-            &._3PQ7V {
+            &._1WZqU.PNlAR {
                 c: white 0 ac;
                 box-shadow: bsh;
                 transition: 0.15s ease;
@@ -728,7 +728,6 @@
             /._1CnF3 {
                 padding: 0 i;
                 > div { padding: 22px 24px 20px i }
-                [role = 'button'] { c: white 0 ac }
             }
         }
         /// Settings -> Upload a new avatar.
@@ -1447,8 +1446,6 @@
                         c: 0 0 t;
                         &::before { c: 0 0 ac }
                     }
-                    /// Right -> Fix bg for checkbox button.
-                    &._21W00::before { c: 0 0 t }
                 }
                 /// Checkboxes.
                 ._1VD7W {
