modals: fix headers and focused search background

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -641,14 +641,12 @@
             c: 0 0 bg;
         }
         /// Header.
-        &[data-animate-media-viewer] > div:first-child  {
+        ._2YdsD, ._3pRd1 {
             c: 0 0 hl;
             box-shadow: 0 1px bd;
-            /// Remove all borders and backgrounds.
-            div:not([style *= 'height']) { c: fg t t }
             /// Text.
-            .xD91K { c: cm }
-            ._3H4MS { c: fg }
+            ._1AwDx { c: cm }
+            ._25Ooe { c: fg }
             /// Media -> Fix header background hover conflict.
             ._2EXPL:not(#z):hover { c: 0 0 t }
         }
@@ -1065,7 +1063,7 @@
             transition: 0.2s ease;
             border-bottom: 1px solid bd;
             c: 0 0 hl;
-            &._19OGD { c: 0 0 bg }
+            &._3sdhb { c: 0 0 bg }
             &::after { content: none }
             > div + label {
                 rad: radius-i i;
