right: fix avatar and msg info area backgrounds

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -453,7 +453,7 @@
         }
 
         /// Panes -> Change avatar hover animation.
-        ._1JS2G {
+        .WX_XW {
             c: fg 0 #19191980;
             rad: 0 i;
         }
@@ -1268,7 +1268,7 @@
     // App -> Right.
     ._14VS3 .copyable-area {
         /// Default avatar.
-        [style *= 'height: 200px'] ._2EaHs { c: 0 0 bg }
+        [style *= 'height: 200px'] > div { c: 0 0 bg }
         /// Text color.
         .iYPsH { c: fg }
         ._2IwIk, ._1goQ0, ._2IkcY { c: cm }
@@ -1314,7 +1314,7 @@
             span { c: ac }
         }
         /// Message info -> X remaining.
-        ._19xqi {
+        .Um7sh {
             c: 0 0 t;
             box-shadow: 0 1px bd;
         }
