global: fix tooltips and emoji selection selectors

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -355,7 +355,7 @@
         }
 
         /// App -> Tooltips.
-        ._3pkG4 {
+        .hYvJ8 {
             c: fg 0 hl;
             box-shadow: inner, bsh;
             button { c: ac }
@@ -1012,9 +1012,9 @@
                 }
             }
             /// Emojis -> Race selection.
-            > ul._3z3lc {
-                li._1sHYl { c: 0 0 t }
-                > li:first-child { c: 0 bd }
+            > ul._2imug {
+                li._1exov { c: 0 0 t }
+                li:first-child { c: 0 bd }
                 + [data-animate-dropdown-nib] {
                     border-bottom: 1px solid bd;
                     border-right: 1px solid bd;
@@ -1700,6 +1700,7 @@
             > div > span:last-child > div[style] {
                 /// Non-stickers | Groups -> Combined stickers.
                 &:not(._1UyGF), /._1i1U7.jZ4tp {
+                    height: 20px i;
                     background: linear-gradient(90deg, t, left 80%) i;
                 }
                 /// Stickers.
@@ -1950,7 +1951,7 @@
             c: 0 0 bg;
             box-shadow: bsh, inset 0 1px bd i;
             /// Nickname.
-            /._1F9Ap:not(#z) { c: cm }
+            /._3Ye_R:not(#z) { c: cm }
             /// Content.
             > div:first-child:not(#z) {
                 margin: 4px 0 8px 66px;
