global: fix selectors for the video player
Closes #133.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -462,16 +462,17 @@
         #group-invite-link-anchor { c: ac }
 
         /// Global -> Media player.
-        /.OZVc4 {
-            /// Reset sliders.
-            ._3N5w5 {
+        /._2jPGD {
+            c: 0 0 bd;
+            /// Reset input.
+            ._3y8EC {
                 &::-webkit-slider-runnable-track { c: 0 0 t }
                 &::-moz-range { &-progress, &-track { c: 0 0 t }}
             }
             /// Progress bar.
-            ._2bTRm ._2ZXtj { c: 0 0 ac }
+            ._1y1Zk { c: 0 0 ac }
             /// Audio level.
-            /._3Nf6W {
+            /._3wbrC {
                 c: 0 0 t;
                 + ::-moz-range {
                     &-progress, &-thumb { c: 0 0 ac }
@@ -479,7 +480,7 @@
                 }
             }
             /// Fix box-shadow.
-            /._1p-0O { box-shadow: 0 4px 12px 2px sh-h i }
+            /.llRZq { box-shadow: 0 4px 12px 2px sh-h i }
         }
     }
 
